--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.1 # For state management
-  url_launcher: ^6.1.7 # To handle URL links
-  cached_network_image: ^3.2.3 # To handle images
+  provider: ^6.1.0 # For state management
+  url_launcher: ^6.3.0 # To handle URL links
+  cached_network_image: ^3.4.0 # To handle images
+  hive: ^2.2.0
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.4  # Required to get the correct paths for storing Hive boxes
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.0
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
