--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   hive: ^2.2.0
   hive_flutter: ^1.1.0
   path_provider: ^2.1.4  # Required to get the correct paths for storing Hive boxes
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
