--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.4  # Required to get the correct paths for storing Hive boxes
   file_picker: ^8.1.2
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +27,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/celebration.json
+    - assets/atom-loader.json
